<resources>
    <string name="app_name">Basketball</string>
    <string name="home_title">Basketball Manage System</string>
    <string name="home_scan_qr">Scan QR code to login</string>
    <string name="total_basketballs">Total: %d</string>
    <string name="remain_basketballs">Remaining: %d</string>
    <string name="borrow_basketball">Borrow</string>
    <string name="return_basketball">Return</string>
    <string name="admin_login">Admin</string>
    <string name="admin_password_hint">Enter the Admin password</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="welcome_text_format">Welcome %s</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_user_name">Guest</string>
    <string name="footer_technique_support">Technique support: Shenzhen Ruihao Technology Co., Ltd</string>
    <string name="footer_tel">Tel: 0755–8423987</string>
    <string name="tip_login">Please login via either card or face at first</string>
    <string name="tip_take_basketball">Please take the basketball</string>
    <string name="tip_return_basketball">Please put the basketball into the door just opened</string>
    <string name="tip_no_basketball">No basketball left in this machine, please try in another one</string>
    <string name="tip_no_space">This machine is full, please try in another one</string>
    <string name="tip_borrowed_exceed_limit">Sorry, you already borrowed the maximum number of basketballs</string>
    <string name="tip_login_user_not_found">The user not found</string>
    <string name="tip_login_user_succeed">The user %s login succeed</string>
    <string name="tip_device_error">Sorry，error occurred in the machine, please contact the tech support</string>
    <string name="tip_return_succeed">Your basketball returned succeed, thanks for using</string>
    <string name="tip_return_failed">Failed to return basketball, try it again</string>
    <string name="tip_end_sync_users">Update users accounts completed</string>
    <string name="tip_sync_busy">Please wait, the machine is downloading and updating users accounts</string>
    <string name="tip_start_sync_users">Start updating user accounts</string>
    <string name="view_borrow_records">Borrowing log</string>
    <string name="load_basketballs">Please load basketballs</string>

    <string name="home_title_admin">Basketball Manage System (Admin)</string>
    <string name="admin_user_register">User Register</string>
    <string name="admin_settings">Settings</string>
    <string name="admin_borrow_log">Borrow Log</string>
    <string name="admin_user_list">Users List</string>
    <string name="admin_load_balls">Load Balls</string>
    <string name="admin_borrow">Borrow</string>
    <string name="admin_return">Return</string>
    <string name="admin_tip_load_balls">Please put the balls into both channels</string>
    <string name="admin_user_register_title">User Register</string>
    <string name="admin_user_edit_title">User Edit</string>
    <string name="admin_user_register_hint_name">Name</string>
    <string name="admin_user_register_hint_bar_qr_number">QR number(Barcode)</string>
    <string name="admin_user_register_hint_ic_number">IC Card number</string>
    <string name="admin_user_register_hint_gender">Gender</string>
    <string name="admin_user_register_hint_male">Male</string>
    <string name="admin_user_register_hint_female">Female</string>
    <string name="admin_user_register_hint_age">Age</string>
    <string name="admin_user_register_hint_height">Height</string>
    <string name="admin_user_register_hint_weight">Weight</string>
    <string name="admin_user_register_hint_grade">Grade</string>
    <string name="admin_user_register_hint_aqddress">Address</string>
    <string name="admin_user_register_hint_phone">Phone</string>
    <string name="admin_user_register_hint_class_grade">Class Grade</string>
    <string name="admin_user_register_terms_conditions">I have read, understood and accept the user registration rules</string>
    <string name="admin_user_register_alert_name_null">User name cannot be null</string>
    <string name="admin_user_register_alert_gender_null">Please choose your gender</string>
    <string name="admin_user_register_alert_terms_conditions_uncheck">Please accept and check the terms and conditions</string>
    <string name="admin_user_register_alert_number_photo_null">User number and photo cannot be both null</string>
    <string name="admin_user_register_alert_face_not_found">Face not found, please make sure your face right to the camera</string>
    <string name="admin_user_register_tip_user_register_succeed">Register user succeed!</string>
    <string name="admin_user_register_submit">Submit</string>
    <string name="admin_user_register_optional">Optional</string>

    <!-- Settings -->
    <string name="settings_title_left_balls_qty">Left Channel Balls Qty</string>
    <string name="settings_title_right_balls_qty">Right Channel Balls Qty</string>
    <string name="settings_title_left_balls_qty_max">Maximum of the left Channel Balls Qty</string>
    <string name="settings_title_right_balls_qty_max">Maximum of the right Channel Balls Qty</string>
    <string name="settings_title_ball_release_interval">Interval of release balls (ms)</string>
    <string name="settings_title_ball_entry_lock_time">Time of lock opening for returning ball (ms)</string>
    <string name="settings_title_camera_ip">Camera IP Address</string>
    <string name="settings_title_admin_password">Admin password</string>

    <!-- User List -->
    <string name="user_list_menu_item_edit">Edit</string>
    <string name="user_list_menu_item_remove">Remove</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>


    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>

    <!-- Default for size preference -->
    <string name="pref_size_default" translatable="false">15</string>
</resources>