<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="0"
        android:key="left_balls_qty"
        android:title="@string/settings_title_left_balls_qty"/>
    <EditTextPreference
        android:defaultValue="0"
        android:key="right_balls_qty"
        android:title="@string/settings_title_right_balls_qty"/>
    <EditTextPreference
        android:defaultValue="12"
        android:key="left_balls_qty_max"
        android:title="@string/settings_title_left_balls_qty_max"/>
    <EditTextPreference
        android:defaultValue="12"
        android:key="right_balls_qty_max"
        android:title="@string/settings_title_left_balls_qty_max"/>
    <EditTextPreference
        android:defaultValue="1000"
        android:key="ball_release_interval"
        android:title="@string/settings_title_ball_release_interval"/>
    <EditTextPreference
        android:defaultValue="3000"
        android:key="ball_entry_lock_time"
        android:title="@string/settings_title_ball_entry_lock_time"/>
    <EditTextPreference
        android:defaultValue=""
        android:key="camera_rtsp_ip"
        android:title="@string/settings_title_camera_ip"/>
</PreferenceScreen>