<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basketballHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basketball_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFC107"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/gvChannelBasketballs"
        android:layout_width="702dp"
        android:layout_height="192dp"
        android:layout_marginTop="88dp"
        android:footerDividersEnabled="false"
        android:numColumns="12"
        android:paddingHorizontal="2dp"
        android:horizontalSpacing="8dp"
        android:verticalSpacing="16dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeTitle" />

    <android.widget.Button
        android:id="@+id/btnBorrow"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/borrow_basketball"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <android.widget.Button
        android:id="@+id/btnReturn"
        android:layout_width="207dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/return_basketball"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toEndOf="@+id/btnBorrow"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="454dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gvChannelBasketballs">

        <TextView
            android:id="@+id/tvTotalQty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp"
            android:gravity="center_vertical"
            android:text="@string/total_basketballs"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvRemainQty"
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="120dp"
            android:gravity="center_vertical"
            android:text="@string/remain_basketballs"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/welcome_text_format"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrow" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="175dp"
        android:layout_height="327dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreeting" />

    <TextView
        android:id="@+id/tvFooterTechSupport"
        android:layout_width="376dp"
        android:layout_height="25dp"
        android:layout_marginTop="204dp"
        android:text="@string/footer_technique_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder" />

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer_tel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFooterTechSupport"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>